--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -30,7 +30,13 @@
 	font-style: normal;
 	font-display: swap;
 }
+
 body {
+    background-color: #0d0d0d;
+    color: #33ff33;
+    font-family: 'Fira Code', 'Source Code Pro', monospace;
+}
+/*body {
 	font-family: 'Atkinson', sans-serif;
 	margin: 0;
 	padding: 0;
@@ -42,14 +48,21 @@ body {
 	color: rgb(var(--gray-dark));
 	font-size: 20px;
 	line-height: 1.7;
-}
+}*/
+
+
 main {
 	width: 720px;
 	max-width: calc(100% - 2em);
 	margin: auto;
 	padding: 3em 1em;
 }
-h1,
+
+h1, h2, h3, h4 {
+    color: #00ff00;
+    font-family: 'Fira Code', monospace;
+}
+/*h1,
 h2,
 h3,
 h4,
@@ -74,16 +87,25 @@ h4 {
 h5 {
 	font-size: 1.25em;
 }
+*/
+
 strong,
 b {
 	font-weight: 700;
 }
+
 a {
+    color: #66ff66;
+    text-decoration: underline;
+}
+/*a {
 	color: var(--accent);
 }
 a:hover {
 	color: var(--accent);
-}
+}*/
+
+
 p {
 	margin-bottom: 1em;
 }
@@ -105,15 +127,31 @@ img {
 	height: auto;
 	border-radius: 8px;
 }
+
 code {
+    background-color: #111111;
+    color: #00ff00;
+    padding: 0.2em 0.4em;
+    border-radius: 4px;
+}
+/*code {
 	padding: 2px 5px;
 	background-color: rgb(var(--gray-light));
 	border-radius: 2px;
-}
+}*/
+
 pre {
+    background-color: #111111;
+    padding: 1em;
+    border-radius: 8px;
+    overflow-x: auto;
+    color: #33ff33;
+    font-family: 'Fira Code', monospace;
+}
+/*pre {
 	padding: 1.5em;
 	border-radius: 8px;
-}
+}*/
 pre > code {
 	all: unset;
 }
