URL Issue::Test2

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -12,9 +12,27 @@ interface Props {
 	image?: ImageMetadata;
 }
 
-const canonicalURL = new URL(Astro.url.pathname, Astro.site);
-
 const { title, description, image = FallbackImage } = Astro.props;
+
+// Safely create URLs
+const getCanonicalURL = () => {
+  try {
+    return new URL(Astro.url.pathname, Astro.site);
+  } catch {
+    return Astro.url;
+  }
+};
+
+const getImageURL = () => {
+  try {
+    return new URL(image.src, Astro.site);
+  } catch {
+    return new URL(image.src, Astro.url);
+  }
+};
+
+const canonicalURL = getCanonicalURL();
+const imageURL = getImageURL();
 ---
 
 <!-- Global Metadata -->
@@ -26,7 +44,7 @@ const { title, description, image = FallbackImage } = Astro.props;
 	rel="alternate"
 	type="application/rss+xml"
 	title={SITE_TITLE}
-	href={new URL('rss.xml', Astro.site)}
+	href={new URL('rss.xml', Astro.site || Astro.url)}
 />
 <meta name="generator" content={Astro.generator} />
 
@@ -47,11 +65,11 @@ const { title, description, image = FallbackImage } = Astro.props;
 <meta property="og:url" content={Astro.url} />
 <meta property="og:title" content={title} />
 <meta property="og:description" content={description} />
-<meta property="og:image" content={new URL(image.src, Astro.url)} />
+<meta property="og:image" content={imageURL} />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content={Astro.url} />
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
-<meta property="twitter:image" content={new URL(image.src, Astro.url)} />
+<meta property="twitter:image" content={imageURL} />
