--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,21 +8,12 @@ import { SITE_TITLE } from '../consts';
 		<h2><a href="/">{SITE_TITLE}</a></h2>
 		<div class="internal-links">
 			<HeaderLink href="/">Home</HeaderLink>
-<<<<<<< HEAD
-<<<<<<< HEAD
 			<HeaderLink href="/blog">Notes</HeaderLink>
-=======
-			<HeaderLink href="/notes">Notes</HeaderLink>
->>>>>>> parent of c4d7c0d (revert)
-=======
-			<HeaderLink href="/notes">Notes</HeaderLink>
->>>>>>> parent of c4d7c0d (revert)
-			<HeaderLink href="/projects">Projects</HeaderLink>
 			<HeaderLink href="/about">About</HeaderLink>
 		</div>
 		<div class="social-links">
 			<a href="https://t.me/void_rc" target="_blank">
-				<span class="sr-only">Telegram</span>
+				<span class="sr-only">Follow on Telegram</span>
 				<svg viewBox="0 0 24 24" aria-hidden="true" width="32" height="32">
 					<path
 						fill="currentColor"
@@ -30,8 +21,8 @@ import { SITE_TITLE } from '../consts';
 					></path>
 				</svg>
 			</a>
-			<a href="https://github.com/voidrc" target="_blank">
-				<span class="sr-only">GitHub</span>
+			<a href="https://github.com/withastro/astro" target="_blank">
+				<span class="sr-only">Go to Astro's GitHub repo</span>
 				<svg viewBox="0 0 16 16" aria-hidden="true" width="32" height="32"
 					><path
 						fill="currentColor"
