--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -7,7 +7,7 @@ import { getCollection } from 'astro:content';
 import FormattedDate from '../../components/FormattedDate.astro';
 import { Image } from 'astro:assets';
 
-const posts = (await getCollection('projects')).sort(
+const projects = (await getCollection('projects')).sort(
 	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
 );
 ---
@@ -92,15 +92,15 @@ const posts = (await getCollection('projects')).sort(
 			<section>
 				<ul>
 					{
-						posts.map((post) => (
+						projects.map((project) => (
 							<li>
-								<a href={`/projects/${post.id}/`}>
-									{post.data.heroImage && (
-										<Image width={720} height={360} src={post.data.heroImage} alt="" />
+								<a href={`/projects/${project.id}/`}>
+									{project.data.heroImage && (
+										<Image width={720} height={360} src={project.data.heroImage} alt="" />
 									)}
-									<h4 class="title">{post.data.title}</h4>
+									<h4 class="title">{project.data.title}</h4>
 									<p class="date">
-										<FormattedDate date={post.data.pubDate} />
+										<FormattedDate date={project.data.pubDate} />
 									</p>
 								</a>
 							</li>
