--- a/src/pages/projects/[...slug].astro
+++ b/src/pages/projects/[...slug].astro
@@ -1,9 +1,7 @@
 ---
-import { getCollection } from 'astro:content';
-import BaseHead from '../../components/BaseHead.astro';
-import Header from '../../components/Header.astro';
-import Footer from '../../components/Footer.astro';
-import { Image } from 'astro:assets';
+import { type CollectionEntry, getCollection } from 'astro:content';
+import ProjectsPost from '../../layouts/ProjectsPost.astro';
+import { render } from 'astro:content';
 
 export async function getStaticPaths() {
 	const projects = await getCollection('projects');
@@ -12,45 +10,12 @@ export async function getStaticPaths() {
 		props: project,
 	}));
 }
-const { Content } = await Astro.props;
-const { title, description, pubDate, heroImage } = Astro.props.data;
+type Props = CollectionEntry<'projects'>;
+
+const project = Astro.props;
+const { Content } = await render(project);
 ---
 
-<!doctype html>
-<html lang="en">
-	<head>
-		<BaseHead title={title} description={description} />
-		<style>
-			main {
-				width: 720px;
-			}
-			img {
-				width: 100%;
-				border-radius: 12px;
-			}
-			.date {
-				color: rgb(var(--gray));
-			}
-		</style>
-	</head>
-	<body>
-		<Header />
-		<main>
-			<article>
-				{heroImage && <Image width={720} height={360} src={heroImage} alt="" />}
-				<h1>{title}</h1>
-				<p class="date">
-					<time datetime={pubDate.toISOString()}>
-						{pubDate.toLocaleDateString('en-US', {
-							year: 'numeric',
-							month: 'long',
-							day: 'numeric',
-						})}
-					</time>
-				</p>
-				<Content />
-			</article>
-		</main>
-		<Footer />
-	</body>
-</html>
+<ProjectsPost {...project.data}>
+	<Content />
+</ProjectsPost>
