--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -7,16 +7,9 @@ import { getCollection } from 'astro:content';
 import FormattedDate from '../../components/FormattedDate.astro';
 import { Image } from 'astro:assets';
 
-console.log('Starting to fetch projects...');
-const projects = await getCollection('projects');
-console.log('Raw projects:', projects);
-console.log('Projects length:', projects.length);
-console.log('First project data:', projects[0]?.data);
-
-const sortedProjects = projects.sort(
+const projects = (await getCollection('projects')).sort(
 	(a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
 );
-console.log('Sorted projects:', sortedProjects);
 ---
 
 <!doctype html>
@@ -99,7 +92,7 @@ console.log('Sorted projects:', sortedProjects);
 			<section>
 				<ul>
 					{
-						sortedProjects.map((project) => (
+						projects.map((project) => (
 							<li>
 								<a href={`/projects/${project.id}/`}>
 									{project.data.heroImage && (
