--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from '../layouts/BlogPost.astro';
+import Layout from '../layouts/ProjectsPost.astro';
 import AboutHeroImage from '../assets/blog-placeholder-about.jpg';
 ---
 
