--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,7 +14,7 @@ import { SITE_TITLE } from '../consts';
 		</div>
 		<div class="social-links">
 			<a href="https://t.me/void_rc" target="_blank">
-				<span class="sr-only">Follow on Telegram</span>
+				<span class="sr-only">Contact on Telegram</span>
 				<svg viewBox="0 0 24 24" aria-hidden="true" width="32" height="32">
 					<path
 						fill="currentColor"
@@ -22,8 +22,8 @@ import { SITE_TITLE } from '../consts';
 					></path>
 				</svg>
 			</a>
-			<a href="https://github.com/withastro/astro" target="_blank">
-				<span class="sr-only">Go to Astro's GitHub repo</span>
+			<a href="https://github.com/voidrc" target="_blank">
+				<span class="sr-only">GitHub Account</span>
 				<svg viewBox="0 0 16 16" aria-hidden="true" width="32" height="32"
 					><path
 						fill="currentColor"
