on going  modifcation of notes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,9 +29,9 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 			
 			<h2>❯ What you'll find here:</h2>
 			<ul>
-				<li>📝 <a href="/blog">Notes</a> — walkthroughs, insights, reflections</li>
-				<li>🧪 <a href="/projects">Projects</a> — tools, scripts, experiments</li>
-				<li>🎯 HackTheBox & HackMyVM writeups</li>
+				<li><a href="/blog">Notes</a> — walkthroughs, insights, reflections</li>
+				<li><a href="/projects">Projects</a> — tools, scripts, experiments</li>
+				<li>HackTheBox & HackMyVM writeups</li>
 			</ul>
 
 			<h2>❯ TODO:</h2>
