--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@ const today = new Date();
 <footer>
 	<div class="footer-content">
 		<div class="copyright">
-			<span class="prompt">$</span> &copy; {today.getFullYear()} \{.voidrc\} All rights reserved.
+			<span class="prompt">$</span> &copy; {today.getFullYear()} .voidrc All rights reserved.
 		</div>
 		<div class="social-links">
 			<a href="https://t.me/void_rc" target="_blank">
